testdata/baselines/reference/submodule/conformance/callbackTag3.errors.txt
cb.js(4,12): error TS8010: Type annotations can only be used in TypeScript files.


==== cb.js (1 errors) ====
    /** @callback Miracle
     * @returns {string} What were you expecting
     */
    /** @type {Miracle} smallId */
               ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var sid = () => "!";
    
    